--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -96,3 +96,4 @@ pt:
       record_invalid: "Validação falhou: %{errors}"
       not_a_number: "não é um número"
       greater_than_or_equal_to: "deve ser maior ou igual que %{count}"
+      greater_than: "deve ser maior que %{count}"
