Add specialty for Doctors

--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -41,6 +41,7 @@ pt:
         crm: "CRM"
         last_name: "Sobrenome"
         name: "Nome"
+        specialty: "Especialidade"
       exam:
         date: "Data do exame"
         classification: "Tipo do exame"
