Add city and state to patient

--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -65,6 +65,8 @@ pt:
         last_name: "Sobrenome"
         name: "Nome"
         rg: "RG"
+        city: "Cidade"
+        state: "Estado"
       prescription:
         date: "Data da prescrição"
         medications_count: "Quantidade de medicamentos"
