Allow doctor and patient edit own data

--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -111,6 +111,7 @@ pt:
   # Model errors
   errors:
     messages:
+      confirmation: "não é igual a %{attribute}"
       blank: "obrigatório"
       inclusion: "não é uma opção válida"
       invalid: "inválido"
